add WEST ICRH antenna RF modeling section

--- a/master.tex
+++ b/master.tex
@@ -131,6 +131,33 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 % fix bad unicode character which may arise from copy/paste
 \DeclareUnicodeCharacter{202F}{\,}
 
+% ###### listing stuff
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+	backgroundcolor=\color{backcolour},  
+	commentstyle=\color{codegreen},
+	keywordstyle=\color{magenta},
+	numberstyle=\tiny\color{codegray},
+	stringstyle=\color{codepurple},
+	basicstyle=\footnotesize,
+	breakatwhitespace=false,        
+	breaklines=true,                
+	captionpos=b,                   
+	keepspaces=true,                
+	numbers=left,                   
+	numbersep=5pt,                 
+	showspaces=false,               
+	showstringspaces=false,
+	showtabs=false,                 
+	tabsize=2
+}
+
+\lstset{style=mystyle}
+
 %----------------------------------------------------------------------------------------
 \begin{document}
 	
