--- a/references.bib
+++ b/references.bib
@@ -11641,6 +11641,20 @@
   number = {1}
 }
 
+@article{kluyver2016,
+  title = {Jupyter {{Notebooks}} \&ndash; a Publishing Format for Reproducible Computational Workflows},
+  author = {Kluyver, Thomas and {Ragan-Kelley}, Benjamin and P\&eacute;rez, Fernando and Granger, Brian and Bussonnier, Matthias and Frederic, Jonathan and Kelley, Kyle and Hamrick, Jessica and Grout, Jason and Corlay, Sylvain and Ivanov, Paul and Avila, Dami\&aacute;n and Abdalla, Safia and Willing, Carol and Jupyter Development, Team},
+  year = {2016},
+  pages = {87--90},
+  issn = {0000-0000},
+  doi = {10/gf48c9},
+  abstract = {It is increasingly necessary for researchers in all fields to write computer code, and in order to reproduce research results, it is important that this code is published. We present Jupyter notebooks, a document format for publishing code, results and explanations in a form that is both readable and executable. We discuss various tools and use cases for notebook documents.},
+  copyright = {\textcopyright{}2016 \&copy; The authors and IOS Press.},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Softwares\\Kluyver et al._2016_Jupyter Notebooks—a publishing format for reproducible computational workflows.pdf},
+  journal = {Stand Alone},
+  language = {en}
+}
+
 @techreport{Knowlton1986,
   title = {Lower {{Hybrid Wave Launching}} and {{Antenna Design}}},
   author = {Knowlton, S.F. and Porkolab, Miklos},
@@ -14469,6 +14483,21 @@
   number = {7}
 }
 
+@article{millman2011,
+  title = {Python for {{Scientists}} and {{Engineers}}},
+  author = {Millman, K. Jarrod and Aivazis, Michael},
+  year = {2011},
+  month = mar,
+  volume = {13},
+  pages = {9--12},
+  publisher = {{IEEE Computer Society}},
+  issn = {1521-9615},
+  doi = {10/dc343g},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\H3Y7GQMQ\\MCSE.2011.html},
+  journal = {Computing in Science \& Engineering},
+  number = {2}
+}
+
 @book{milton2006,
   ids = {Schwinger2006,milton2006-1,zotero-1955},
   title = {Electromagnetic Radiation: Variational Methods, Waveguides and Accelerators},
@@ -16670,6 +16699,30 @@ simulation capabilities, diagnostic analysis tools, and the plan for base data s
   journal = {MACHINE LEARNING IN PYTHON},
   keywords = {⛔ No DOI found},
   language = {en}
+}
+
+@article{pedregosa-1,
+  title = {Scikit-Learn: {{Machine Learning}} in {{Python}}},
+  author = {Pedregosa, Fabian and Varoquaux, Gael and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David},
+  pages = {6},
+  abstract = {Scikit-learn is a Python module integrating a wide range of state-of-the-art machine learning algorithms for medium-scale supervised and unsupervised problems. This package focuses on bringing machine learning to non-specialists using a general-purpose high-level language. Emphasis is put on ease of use, performance, documentation, and API consistency. It has minimal dependencies and is distributed under the simplified BSD license, encouraging its use in both academic and commercial settings. Source code, binaries, and documentation can be downloaded from http://scikit-learn.sourceforge.net.},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\MMUWRIG4\\Pedregosa et al. - Scikit-learn Machine Learning in Python.pdf},
+  journal = {MACHINE LEARNING IN PYTHON},
+  keywords = {⛔ No DOI found},
+  language = {en}
+}
+
+@article{pedregosa2011,
+  title = {Scikit-Learn: {{Machine Learning}} in {{Python}}},
+  shorttitle = {Scikit-Learn},
+  author = {Pedregosa, Fabian and Varoquaux, Ga{\"e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, {\'E}douard},
+  year = {2011},
+  volume = {12},
+  pages = {2825--2830},
+  issn = {1533-7928},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\XGW738ZC\\Pedregosa et al_2011_Scikit-learn.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\CYUW35ZM\\pedregosa11a.html},
+  journal = {Journal of Machine Learning Research},
+  number = {85}
 }
 
 @article{pegourie2009,
@@ -20586,18 +20639,18 @@ Multipactor analysis for different structures were performed, and the breakdown 
   number = {6}
 }
 
-@article{thomas2016,
+@article{thomas2016-1,
   title = {Jupyter {{Notebooks}} \&ndash; a Publishing Format for Reproducible Computational Workflows},
   author = {Thomas, Kluyver and Benjamin, Ragan-Kelley and Fernando, P\&eacute;rez and Brian, Granger and Matthias, Bussonnier and Jonathan, Frederic and Kyle, Kelley and Jessica, Hamrick and Jason, Grout and Sylvain, Corlay and Paul, Ivanov and Dami\&aacute;n, Avila and Safia, Abdalla and Carol, Willing and Team, Jupyter Development},
   year = {2016},
   pages = {87--90},
+  publisher = {{IOS Press}},
+  address = {{Netherlands}},
   issn = {0000-0000},
   doi = {10/gf48c9},
   abstract = {It is increasingly necessary for researchers in all fields to write computer code, and in order to reproduce research results, it is important that this code is published. We present Jupyter notebooks, a document format for publishing code, results and explanations in a form that is both readable and executable. We discuss various tools and use cases for notebook documents.},
   copyright = {\textcopyright{}2016 \&copy; The authors and IOS Press.},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Softwares\\Kluyver et al._2016_Jupyter Notebooks—a publishing format for reproducible computational workflows.pdf},
-  journal = {Stand Alone},
-  language = {en}
+  journal = {Stand Alone}
 }
 
 @book{thourel1964,
