--- a/tex/chap2.tex
+++ b/tex/chap2.tex
@@ -2,9 +2,9 @@
 \chapter{RF Coupling}
 \label{chap:rf_coupling}
 %\margintoc
-This chapter aims to give the key elements in order to derive the optimum characteristics for RF plasma heating or current drive antennas. The section \ref{sec:waves-in-plasma} first characterizes the propagation medium, in particular the kind of modes that can propagate in the plasma as a response to a given excitation. The sections \ref{sec:icrh} and \ref{sec:lhcd} focuses on the specific range of frequencies of ICRF and LHCD. 
+This chapter aims to give the key elements in order to derive the optimum characteristics for RF plasma heating or current drive antennas. The section \ref{sec:waves-in-plasma} recall the necessary elements to characterize the propagation medium, in particular the kind of cold plasma wave modes that can propagate in the plasma as a response to a given RF excitation. The sections \ref{sec:icrh} and \ref{sec:lhcd} focuses on the specific ICRH and LHCD range of frequencies. 
 
-Many antenna-plasma coupling models have been developed and most rely on a "slab" approximation which consists in assuming uniformity in the toroidal and poloidal directions while imposing a radiation boundary condition in the radial direction. While much of the essential physics of the coupling at the plasma–antenna interface can be elucidated using this slab approximation, real-life experiments presents additional problems since plasma is not homogeneous, antenna geometries can be complex, images currents are induced on the passive conducting elements surrounding the antenna and wave excitation not perfect. Thus, plasma response and wave fields must be solved with more refinements, treating the antenna geometry as accurately as possible. Antenna-plasma coupling is still a topic of continued research interest and some contributions are presented in Section~\ref{sec:ALOHA}, \ref{sec:LHCD_FW_antena_coupling} and \ref{sec:ICRH_FW_antena_coupling}.
+Many antenna-plasma coupling models have been developed and most rely on a "slab" approximation which consists in assuming uniformity in the toroidal and poloidal directions while imposing a radiation boundary condition in the radial direction. While much of the essential physics of the coupling at the plasma–antenna interface can be elucidated using this slab approximation, real-life experiments presents additional problems since plasma is not homogeneous, antenna geometries can be complex, images currents are induced on the passive conducting elements surrounding the antenna and antennas excitation is not perfect. Thus, plasma response and wave fields must be solved with more refinements, treating the antenna geometry as accurately as possible. Antenna-plasma coupling is still a topic of continued research interest and some contributions are presented in Section~\ref{sec:ALOHA}, \ref{sec:LHCD_FW_antena_coupling} and \ref{sec:ICRH_FW_antena_coupling}.
 
 
 \section{RF Waves In Plasma}\label{sec:waves-in-plasma}
@@ -844,6 +844,10 @@ KSTAR \sidecite{bae2003-1, wang2010}
 % ###################################################
 % ###################################################
 \subsection{Full-Wave Antenna Coupling}\label{sec:ICRH_FW_antena_coupling}
+
+
+
+
 
 % ###################################################
 % ###################################################
