--- a/tex/chap4.tex
+++ b/tex/chap4.tex
@@ -14,3 +14,9 @@ Editor
 \section{Com grand public}
 \section{ITER Robots}
 \section{Dim tokamak?}
+
+\section{Open Source Software Development}
+
+Modern science is founded on hypothesis testing and statistical significances of its derived results. Reproducing experiments, experimental or numerical, is the reason why scientists can gain confidence in their conclusions. However, during the last decades, the number of codes and libraries developed at an individual or a laboratory scale only increased. When these tools are not open-sourced, it leads to an obvious reproducibility problem as one should only rely on authors claims. To conform to the necessity of reproducibility in science,  software sources used in physical and engineering researches should ideally be made open when possible \cite{ince2012}. The case of RF network manipulation and analysis is no different.  
+
+\texttt{Scikit-rf}\footnote{http://www.scikit-rf.org} is a Python package produced for RF/Microwave engineering  \cite{arsenovic2018}. The package is licensed under the Berkeley Software Distribution (BSD) licence and is actively developed by volunteers on GitHub. The package provides a modern, object-oriented library for RF network analysis and calibration. Besides offering standard microwave network operations, such as reading/writing Touchstone files (\texttt{.sNp}), connecting or de-embedding N-port networks, frequency/port slicing, concatenation or interpolations, it is also capable of advanced operations such as Vector Network Analyzer (VNA) calibrations, time-gating, interpolating between an individual set of networks, deriving network statistical properties and supports Virtual Instrument for direct communication to VNAs. The package also allows straightforward plotting of rectangular plots (dB, mag, phase, group delay, etc), Smith Charts or automated uncertainty bounds. As the package is developed in Python, it makes it naturally compatible with the rich and modern scientific Python libraries \cite{millman2011}, for example  \texttt{scikit-learn} for machine learning tasks \cite{pedregosa2011} or \texttt{PlasmaPy} \cite{plasmapycommunity2019} for plasma physics. Using Jupyter notebooks documents\cite{kluyver2016}, modelling approaches and results can be shared and even directly reproduced using tools such as \href{https://mybinder.org/}{Binder} or \href{https://colab.research.google.com/}{Google Colab}, by other researchers (or future self) few months or years after work had been made.
